--- a/style/style.css
+++ b/style/style.css
@@ -12,28 +12,42 @@ body{
     margin: auto;
     background-color: aquamarine;
 }
-.header{
-    width: 100%;
-    height: 10%;
+.top{
+    width: 100vw;
+    height: 10vh;
     background-color: blue;
 }
+
+.side{
+    width: 15vw;
+    height: 87vh;
+    background-color: brown;
+}
+
+section{
+    width: 85vw;
+    height: 87vh;
+    background-color: greenyellow;
+}
+
+.footer{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    width: 100vw;
+    height: 3vh;
+    background-color: lightgray;
+    align-items: center;
+}
+
 .menu{
-    width: 85%;
+    width: 100%;
     height: 5%;
     background-color: goldenrod;
 }
-.side{
-    width: 15%;
-    height: 85%;
-    background-color: brown;
-}
+
 .container{
-    width: 85%;
-    height: 80%;
-    background-color: cornflowerblue;
-}
-.footer{
     width: 100%;
-    height: 5%;
-    background-color: lightgray;
+    height: 95%;
+    background-color: cornflowerblue;
 }
