--- a/style/style.css
+++ b/style/style.css
@@ -51,3 +51,15 @@ section{
     height: 95%;
     background-color: cornflowerblue;
 }
+
+.card{
+    display: flex;
+    justify-content: space-around;
+    align-content: space-around;
+}
+
+.voteslist{
+    width: 30%;
+    height: 30%;
+    border: 1px solid black;
+}
