--- a/style/style.css
+++ b/style/style.css
@@ -16,13 +16,16 @@ body{
 .top{
     width: 100vw;
     height: 10vh;
-    background-color: blue;
+    /* border: 1px solid lightgray; */
 }
 
 .side{
     width: 15vw;
     height: 87vh;
-    background-color: brown;
+    background-image: url(../images/pexels3.jpg);
+        background-repeat: no-repeat;
+        background-position: left top;
+        background-attachment:fixed;
 }
 
 section{
@@ -50,8 +53,11 @@ section{
 .container{
     width: 100%;
     height: 95%;
-    background-color: cornflowerblue;
-    
+    /* background-color: cornflowerblue; */
+    background-image: url(../images/pexels1.jpg);
+        background-repeat: no-repeat;
+        background-position: left top;
+        background-attachment: fixed;
 }
 
 .card{
